# balloon-obc-401

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: I2C.cpp_CM4.language.settings.xml  I2C.cpp_CM7.language.settings.xml  software_CM4.1713758055052.pdom  software_CM4.language.settings.xml  software_CM7.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 2.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/CM7/: .location  .markers  .markers.snap  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/CM7/.indexes/bf/c4/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/I2C.cpp/: .location  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/I2C.cpp_CM4/: .location  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/I2C.cpp_CM4/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/I2C.cpp_CM4/.indexes/af/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/I2C.cpp_CM7/: .location  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/I2C.cpp_CM7/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/I2C.cpp_CM7/.indexes/af/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/balloon-obc/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/obc/: .location  .markers  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/software/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/software_CM4/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/software_CM4/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/software_CM4/.indexes/b/be/6a/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/software_CM7/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/software_CM7/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree  3.tree  5.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: obc.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
common/: CMakeLists.txt
common/Inc/ipc/: callback.hpp
common/Inc/monitoring/: watched_task.hpp
common/Inc/obc/: bus.hpp  port.hpp
common/Inc/obc/bus/: can.hpp  helpers.hpp  types.hpp
common/Inc/obc/dev/: BME280.hpp  weather.hpp
common/Inc/obc/ipc/: callback.hpp  mutex.hpp  non_blocking_queue.hpp
common/Inc/obc/mock/: bus.hpp  port.hpp
common/Inc/obc/monitoring/: logger.hpp  watched_task.hpp
common/Inc/obc/scheduling/: delay.hpp  task.hpp
common/Inc/obc/sys/hosted/: delay.hpp  mutex.hpp
common/Inc/obc/sys/stm32/: delay.hpp  mutex.hpp
common/Inc/obc/utils/: error.hpp  handle.hpp  meta.hpp
common/Inc/utils/: handle.hpp
common/Src/ipc/: mutex.cpp
common/Src/scheduling/: delay.cpp
common/Src/sys/hosted/: delay.cpp
common/Src/sys/stm32/: delay.cpp  mutex.cpp
common/Tests/: CMakeLists.txt
common/Tests/mock/: bus.cpp
software/: .clang-tidy  .project  balloon-obc-software.ioc  license-header
software/CM4/: .cproject
software/CM4/Core/Inc/: FreeRTOSConfig.h  FreeRTOSConfig.h.orig  stm32h7xx_hal_conf.h  stm32h7xx_it.h
software/CM4/Core/Src/: freertos.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
software/CM7/: .cproject  STM32H745ZITX_FLASH.ld
software/CM7/Core/Inc/: FreeRTOSConfig.h  cppmain.hpp  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
software/CM7/Core/Src/: cppmain.cpp  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  sysmem.c
software/Common/Inc/: bus.hpp  callback.hpp  delay.hpp  handle.hpp  logger.hpp  mutex.hpp  non_blocking_queue.hpp  obctask.hpp  units  units.h  units.hpp  watched_task.hpp
software/Common/Inc/I2C/: I2C.hpp
software/Common/Inc/buses/: i2c.hpp
software/Common/Inc/ipc/: mutex.hpp
software/Common/Inc/monitoring/: logger.hpp
software/Common/Src/: delay.cpp  mutex.cpp  system_stm32h7xx_dualcore_boot_cm4_cm7.c
software/Common/Src/buses/: i2c.cpp
systems/: CMakeLists.txt
systems/obc/: .project  CMakeLists.txt  H755ZI_M7.ld  balloon-obc.ioc  obc.ioc
systems/obc/CM4/: .cproject  .project
systems/obc/CM4/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
systems/obc/CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  syscalls.c
systems/obc/CM7/: .project  STM32H745ZITX_RAM.ld
systems/obc/CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
systems/obc/CM7/Core/Src/: cppmain.cpp  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
systems/obc/CM7/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
systems/obc/Makefile/: Makefile
systems/obc/Makefile/CM4/: Makefile  stm32h755xx_flash_CM4.ld  stm32h755xx_sram2_CM4.ld
systems/obc/Makefile/CM7/: Makefile  stm32h755xx_flash_CM7.ld  stm32h755xx_sram1_CM7.ld
tests/: CMakeLists.txt
tests/always_passes/: main.cpp
utils/: add-checks.cmake  compiler-setup.cmake  license-header  linter.sh  run-checks.cmake  system-project.cmake
